--- a/WebContent/test/etc_price.html
+++ b/WebContent/test/etc_price.html
@@ -9,75 +9,139 @@
 <script src="https://www.highcharts.com/media/com_demo/js/highslide.config.js" charset="utf-8"></script>
 <link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/css/highslide.css" />
 
-<pre id="csv" style="display:none">DAY,BITHUMB,POLONEIX
-2017-07-01 00:00:00,3087000,19894
-2017-07-01 04:00:00,3068000,19242
-2017-07-01 08:00:00,3046000,18900
-2017-07-01 12:00:00,3003000,19051
-2017-07-01 16:00:00,2982000,18951
-2017-07-01 20:00:00,3020000,18705
-2017-07-02 00:00:00,2999000,17741
-2017-07-02 04:00:00,2992000,18090
-2017-07-02 08:00:00,3010000,17798
-2017-07-02 12:00:00,3008000,18370
-2017-07-02 16:00:00,2982000,18188
-2017-07-02 20:00:00,3020000,18294
-2017-07-03 00:00:00,2999000,18872
-2017-07-03 04:00:00,2992000,19183
-2017-07-03 08:00:00,3010000,18620
-2017-07-03 12:00:00,3008000,18653
-2017-07-03 16:00:00,3029000,18917
-2017-07-03 20:00:00,3024000,19635
-2017-07-04 00:00:00,3092000,19366
-2017-07-04 04:00:00,3087000,19204
-2017-07-04 08:00:00,3120000,19771
-2017-07-04 12:00:00,3127000,19725
-2017-07-04 16:00:00,3145000,20073
-2017-07-04 20:00:00,3118000,19399
-2017-07-05 00:00:00,3126000,19209
-2017-07-05 04:00:00,3115000,19416
-2017-07-05 08:00:00,3138000,19388
-2017-07-05 12:00:00,3098000,18925
-2017-07-05 16:00:00,3080000,18753
-2017-07-05 20:00:00,3064000,19135
-2017-07-06 00:00:00,3100000,19523
-2017-07-06 04:00:00,3107000,19452
-2017-07-06 08:00:00,3116000,19227
-2017-07-06 12:00:00,3119000,19545
-2017-07-06 16:00:00,3117000,19545
-2017-07-06 20:00:00,3104000,19411
-2017-07-07 00:00:00,3108000,19130
-2017-07-07 04:00:00,3112000,19526
-2017-07-07 08:00:00,3117000,19411
-2017-07-07 12:00:00,3092000,19074
-2017-07-07 16:00:00,3076000,18558
-2017-07-07 20:00:00,3084000,18132
+<pre id="csv" style="display:none">
+DAY,BITHUMB,POLONEIX
+2017-07-01 00:00:00,22295,19894
+2017-07-01 04:00:00,22195,19242
+2017-07-01 08:00:00,22020,18900
+2017-07-01 12:00:00,21890,19051
+2017-07-01 16:00:00,21210,18951
+2017-07-01 20:00:00,21645,18705
+2017-07-02 00:00:00,21150,17741
+2017-07-02 04:00:00,21060,18090
+2017-07-02 08:00:00,20890,17798
+2017-07-02 12:00:00,20650,18370
+2017-07-02 16:00:00,20675,18188
+2017-07-02 20:00:00,20850,18294
+2017-07-03 00:00:00,20670,18872
+2017-07-03 04:00:00,20770,19183
+2017-07-03 08:00:00,21075,18620
+2017-07-03 12:00:00,20890,18653
+2017-07-03 16:00:00,20930,18917
+2017-07-03 20:00:00,20775,19635
+2017-07-04 00:00:00,21185,19366
+2017-07-04 04:00:00,21060,19204
+2017-07-04 08:00:00,21195,19771
+2017-07-04 12:00:00,21165,19725
+2017-07-04 16:00:00,21600,20073
+2017-07-04 20:00:00,21440,19399
+2017-07-05 00:00:00,21325,19209
+2017-07-05 04:00:00,21200,19416
+2017-07-05 08:00:00,21165,19388
+2017-07-05 12:00:00,21070,18925
+2017-07-05 16:00:00,20985,18753
+2017-07-05 20:00:00,20500,19135
+2017-07-06 00:00:00,20600,19523
+2017-07-06 04:00:00,20800,19452
+2017-07-06 08:00:00,20855,19227
+2017-07-06 12:00:00,20610,19545
+2017-07-06 16:00:00,22490,19545
+2017-07-06 20:00:00,21180,19411
+2017-07-07 00:00:00,20900,19130
+2017-07-07 04:00:00,20960,19526
+2017-07-07 08:00:00,20980,19411
+2017-07-07 12:00:00,21060,19074
+2017-07-07 16:00:00,20720,18558
+2017-07-07 20:00:00,20700,18132
 
 
 </pre><div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <script>
 
+<!--
+function handleFiles() {
+
+    $(document).ready(function () {
+        $.ajax({
+            type: "GET",
+            url: "D:\Docs\Desktop\csvfile.csv",
+            dataType: "csv",
+            success: function (data) { processData(data); }
+        });
+    });
+}
+-->
+
+$.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.csv&callback=?', function (csv) {
  Highcharts.chart('container', {
+	 colors: ['#2b908f', '#90ee7e', '#f45b5b', '#7798BF', '#aaeeee', '#ff0066', '#eeaaee',
+	      '#55BF3B', '#DF5353', '#7798BF', '#aaeeee'],
+	   chart: {
+	      backgroundColor: {
+	         linearGradient: { x1: 0, y1: 0, x2: 1, y2: 1 },
+	         stops: [
+	            [0, '#242943'],
+	            [1, '#242943']
+	         ]
+	      },
+	      style: {
+	         fontFamily: '\'Unica One\', sans-serif'
+	      },
+	      plotBorderColor: '#242943'
+	   },
 
      data: {
          csv: document.getElementById('csv').innerHTML
      },
 
      title: {
-         text: '시세 정보'
+         text: '시세 정보',
+         style: {
+             color: '#E0E0E3',
+             textTransform: 'uppercase',
+             fontSize: '20px'
+          }
      },
 
      subtitle: {
-         text: '일주일간 시세'
+         text: '일주일간 시세',
+         style: {
+             color: '#E0E0E3',
+             textTransform: 'uppercase'
+          }
      },
 
      xAxis: {
          tickInterval: 4 * 3600 * 1000, // 4시간 단위
          tickWidth: 0,
+         gridLineColor: '#707073',
+         labels: {
+            style: {
+               color: '#E0E0E3'
+            }
+         },
+         lineColor: '#707073',
+         minorGridLineColor: '#505053',
+         tickColor: '#707073',
+         title: {
+            style: {
+               color: '#A0A0A3'
+            }
+         }
      },
 
      yAxis: [{ // left y axis
-         title: {
+    	 gridLineColor: '#707073',
+         labels: {
+            style: {
+               color: '#E0E0E3'
+            }
+         },
+         lineColor: '#707073',
+         minorGridLineColor: '#505053',
+         tickColor: '#707073',
+         tickWidth: 1,
+    	 title: {
              text: null
          },
          gridLineWidth: 3,
@@ -103,14 +167,70 @@
          verticalAlign: 'top',
          y: 20,
          floating: true,
-         borderWidth: 0
+         borderWidth: 0,
+         itemStyle: {
+             color: '#E0E0E3'
+          },
+          itemHoverStyle: {
+             color: '#FFF'
+          },
+          itemHiddenStyle: {
+             color: '#606063'
+          }
      },
 
      tooltip: {
-         shared: true,
-         crosshairs: true
+   	      backgroundColor: 'rgba(0, 0, 0, 0.85)',
+   	      style: {
+   	         color: '#F0F0F0'
+   	      }
      },
+     plotOptions: {
+         series: {
+            dataLabels: {
+               color: '#B0B0B3'
+            },
+            marker: {
+               lineColor: '#333'
+            }
+         },
+         boxplot: {
+            fillColor: '#505053'
+         },
+         candlestick: {
+            lineColor: 'white'
+         },
+         errorbar: {
+            color: 'white'
+         }
+      },
+      drilldown: {
+          activeAxisLabelStyle: {
+             color: '#F0F0F3'
+          },
+          activeDataLabelStyle: {
+             color: '#F0F0F3'
+          }
+       },
 
+       navigation: {
+          buttonOptions: {
+             symbolStroke: '#DDDDDD',
+             theme: {
+                fill: '#505053'
+             }
+          }
+       },
+      credits: {
+          style: {
+             color: '#666'
+          }
+       },
+       labels: {
+          style: {
+             color: '#707073'
+          }
+       },
      series: [{
          name: 'Bithumb',
          lineWidth: 4,
@@ -121,4 +241,5 @@
          name: 'Poloneix'
      }]
  });
+});
 </script>
