--- a/WebContent/test/ltc_volume.html
+++ b/WebContent/test/ltc_volume.html
@@ -9,75 +9,141 @@
 <script src="https://www.highcharts.com/media/com_demo/js/highslide.config.js" charset="utf-8"></script>
 <link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/css/highslide.css" />
 
-<pre id="csv" style="display:none">DAY,BITHUMB,POLONEIX
-2017-07-01 00:00:00,15,441671
-2017-07-01 04:00:00,44,418262
-2017-07-01 08:00:00,46,360421
-2017-07-01 12:00:00,113,227222
-2017-07-01 16:00:00,48,86690
-2017-07-01 20:00:00,37,212285
-2017-07-02 00:00:00,91,446009
-2017-07-02 04:00:00,25,837039
-2017-07-02 08:00:00,58,491378
-2017-07-02 12:00:00,116,199138
-2017-07-02 16:00:00,48,343415
-2017-07-02 20:00:00,37,260234
-2017-07-03 00:00:00,91,1028701
-2017-07-03 04:00:00,25,930630
-2017-07-03 08:00:00,58,484128
-2017-07-03 12:00:00,116,2686573
-2017-07-03 16:00:00,85,2061043
-2017-07-03 20:00:00,55,3713979
-2017-07-04 00:00:00,119,1148519
-2017-07-04 04:00:00,8,1026501
-2017-07-04 08:00:00,48,3134209
-2017-07-04 12:00:00,273,844961
-2017-07-04 16:00:00,119,1084342
-2017-07-04 20:00:00,43,3792132
-2017-07-05 00:00:00,91,3201651
-2017-07-05 04:00:00,4,2760933
-2017-07-05 08:00:00,31,3266385
-2017-07-05 12:00:00,90,2682780
-2017-07-05 16:00:00,124,1970617
-2017-07-05 20:00:00,57,2019226
-2017-07-06 00:00:00,62,1527227
-2017-07-06 04:00:00,33,1211400
-2017-07-06 08:00:00,47,1026717
-2017-07-06 12:00:00,76,640085
-2017-07-06 16:00:00,153,1100849
-2017-07-06 20:00:00,120,613510
-2017-07-07 00:00:00,51,315969
-2017-07-07 04:00:00,11,602228
-2017-07-07 08:00:00,21,1044417
-2017-07-07 12:00:00,112,1591475
-2017-07-07 16:00:00,56,796579
-2017-07-07 20:00:00,75,1935107
+<pre id="csv" style="display:none">
+DAY,BITHUMB
+2017-07-01 00:00:00,33020
+2017-07-01 04:00:00,15220
+2017-07-01 08:00:00,20260
+2017-07-01 12:00:00,21700
+2017-07-01 16:00:00,34080
+2017-07-01 20:00:00,10260
+2017-07-02 00:00:00,6420
+2017-07-02 04:00:00,10020
+2017-07-02 08:00:00,33040
+2017-07-02 12:00:00,16960
+2017-07-02 16:00:00,18880
+2017-07-02 20:00:00,12360
+2017-07-03 00:00:00,24780
+2017-07-03 04:00:00,39380
+2017-07-03 08:00:00,27260
+2017-07-03 12:00:00,10000
+2017-07-03 16:00:00,387660
+2017-07-03 20:00:00,585980
+2017-07-04 00:00:00,337000
+2017-07-04 04:00:00,14060
+2017-07-04 08:00:00,36160
+2017-07-04 12:00:00,177300
+2017-07-04 16:00:00,103760
+2017-07-04 20:00:00,136180
+2017-07-05 00:00:00,569120
+2017-07-05 04:00:00,25940
+2017-07-05 08:00:00,357880
+2017-07-05 12:00:00,361640
+2017-07-05 16:00:00,136320
+2017-07-05 20:00:00,215980
+2017-07-06 00:00:00,448180
+2017-07-06 04:00:00,135100
+2017-07-06 08:00:00,462880
+2017-07-06 12:00:00,78320
+2017-07-06 16:00:00,805740
+2017-07-06 20:00:00,289680
+2017-07-07 00:00:00,194580
+2017-07-07 04:00:00,3640
+2017-07-07 08:00:00,36320
+2017-07-07 12:00:00,367600
+2017-07-07 16:00:00,621120
+2017-07-07 20:00:00,387240
+
+
 
 
 </pre><div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <script>
 
+<!--
+function handleFiles() {
+
+    $(document).ready(function () {
+        $.ajax({
+            type: "GET",
+            url: "D:\Docs\Desktop\csvfile.csv",
+            dataType: "csv",
+            success: function (data) { processData(data); }
+        });
+    });
+}
+-->
+
+$.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.csv&callback=?', function (csv) {
  Highcharts.chart('container', {
+	 colors: ['#2b908f', '#90ee7e', '#f45b5b', '#7798BF', '#aaeeee', '#ff0066', '#eeaaee',
+	      '#55BF3B', '#DF5353', '#7798BF', '#aaeeee'],
+	   chart: {
+	      backgroundColor: {
+	         linearGradient: { x1: 0, y1: 0, x2: 1, y2: 1 },
+	         stops: [
+	            [0, '#242943'],
+	            [1, '#242943']
+	         ]
+	      },
+	      style: {
+	         fontFamily: '\'Unica One\', sans-serif'
+	      },
+	      plotBorderColor: '#242943'
+	   },
 
      data: {
          csv: document.getElementById('csv').innerHTML
      },
 
      title: {
-         text: '시세 정보'
+         text: '시세 정보',
+         style: {
+             color: '#E0E0E3',
+             textTransform: 'uppercase',
+             fontSize: '20px'
+          }
      },
 
      subtitle: {
-         text: '일주일간 시세'
+         text: '일주일간 시세',
+         style: {
+             color: '#E0E0E3',
+             textTransform: 'uppercase'
+          }
      },
 
      xAxis: {
          tickInterval: 4 * 3600 * 1000, // 4시간 단위
          tickWidth: 0,
+         gridLineColor: '#707073',
+         labels: {
+            style: {
+               color: '#E0E0E3'
+            }
+         },
+         lineColor: '#707073',
+         minorGridLineColor: '#505053',
+         tickColor: '#707073',
+         title: {
+            style: {
+               color: '#A0A0A3'
+            }
+         }
      },
 
      yAxis: [{ // left y axis
-         title: {
+    	 gridLineColor: '#707073',
+         labels: {
+            style: {
+               color: '#E0E0E3'
+            }
+         },
+         lineColor: '#707073',
+         minorGridLineColor: '#505053',
+         tickColor: '#707073',
+         tickWidth: 1,
+    	 title: {
              text: null
          },
          gridLineWidth: 3,
@@ -98,27 +164,65 @@
          showFirstLabel: false
      }],
 
-     legend: {
-         align: 'left',
-         verticalAlign: 'top',
-         y: 20,
-         floating: true,
-         borderWidth: 0
-     },
-
      tooltip: {
-         shared: true,
-         crosshairs: true
+   	      backgroundColor: 'rgba(0, 0, 0, 0.85)',
+   	      style: {
+   	         color: '#F0F0F0'
+   	      }
      },
+     plotOptions: {
+         series: {
+            dataLabels: {
+               color: '#B0B0B3'
+            },
+            marker: {
+               lineColor: '#333'
+            }
+         },
+         boxplot: {
+            fillColor: '#505053'
+         },
+         candlestick: {
+            lineColor: 'white'
+         },
+         errorbar: {
+            color: 'white'
+         }
+      },
+      drilldown: {
+          activeAxisLabelStyle: {
+             color: '#F0F0F3'
+          },
+          activeDataLabelStyle: {
+             color: '#F0F0F3'
+          }
+       },
 
+       navigation: {
+          buttonOptions: {
+             symbolStroke: '#DDDDDD',
+             theme: {
+                fill: '#505053'
+             }
+          }
+       },
+      credits: {
+          style: {
+             color: '#666'
+          }
+       },
+       labels: {
+          style: {
+             color: '#707073'
+          }
+       },
      series: [{
          name: 'Bithumb',
          lineWidth: 4,
          marker: {
              radius: 4
          }
-     }, {
-         name: 'Poloneix'
      }]
  });
+});
 </script>
