--- a/WebContent/test/xrp_price.html
+++ b/WebContent/test/xrp_price.html
@@ -9,7 +9,8 @@
 <script src="https://www.highcharts.com/media/com_demo/js/highslide.config.js" charset="utf-8"></script>
 <link rel="stylesheet" type="text/css" href="https://www.highcharts.com/media/com_demo/css/highslide.css" />
 
-<pre id="csv" style="display:none">DAY,BITHUMB,POLONEIX
+<pre id="csv" style="display:none">
+DAY,BITHUMB,POLONEIX
 2017-07-01 00:00:00,314,283
 2017-07-01 04:00:00,315,274
 2017-07-01 08:00:00,314,269
@@ -54,31 +55,93 @@
 2017-07-07 20:00:00,295,258
 
 
-
 </pre><div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <script>
 
+<!--
+function handleFiles() {
+
+    $(document).ready(function () {
+        $.ajax({
+            type: "GET",
+            url: "D:\Docs\Desktop\csvfile.csv",
+            dataType: "csv",
+            success: function (data) { processData(data); }
+        });
+    });
+}
+-->
+
+$.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.csv&callback=?', function (csv) {
  Highcharts.chart('container', {
+	 colors: ['#2b908f', '#90ee7e', '#f45b5b', '#7798BF', '#aaeeee', '#ff0066', '#eeaaee',
+	      '#55BF3B', '#DF5353', '#7798BF', '#aaeeee'],
+	   chart: {
+	      backgroundColor: {
+	         linearGradient: { x1: 0, y1: 0, x2: 1, y2: 1 },
+	         stops: [
+	            [0, '#242943'],
+	            [1, '#242943']
+	         ]
+	      },
+	      style: {
+	         fontFamily: '\'Unica One\', sans-serif'
+	      },
+	      plotBorderColor: '#242943'
+	   },
 
      data: {
          csv: document.getElementById('csv').innerHTML
      },
 
      title: {
-         text: '시세 정보'
+         text: '시세 정보',
+         style: {
+             color: '#E0E0E3',
+             textTransform: 'uppercase',
+             fontSize: '20px'
+          }
      },
 
      subtitle: {
-         text: '일주일간 시세'
+         text: '일주일간 시세',
+         style: {
+             color: '#E0E0E3',
+             textTransform: 'uppercase'
+          }
      },
 
      xAxis: {
          tickInterval: 4 * 3600 * 1000, // 4시간 단위
          tickWidth: 0,
+         gridLineColor: '#707073',
+         labels: {
+            style: {
+               color: '#E0E0E3'
+            }
+         },
+         lineColor: '#707073',
+         minorGridLineColor: '#505053',
+         tickColor: '#707073',
+         title: {
+            style: {
+               color: '#A0A0A3'
+            }
+         }
      },
 
      yAxis: [{ // left y axis
-         title: {
+    	 gridLineColor: '#707073',
+         labels: {
+            style: {
+               color: '#E0E0E3'
+            }
+         },
+         lineColor: '#707073',
+         minorGridLineColor: '#505053',
+         tickColor: '#707073',
+         tickWidth: 1,
+    	 title: {
              text: null
          },
          gridLineWidth: 3,
@@ -104,14 +167,70 @@
          verticalAlign: 'top',
          y: 20,
          floating: true,
-         borderWidth: 0
+         borderWidth: 0,
+         itemStyle: {
+             color: '#E0E0E3'
+          },
+          itemHoverStyle: {
+             color: '#FFF'
+          },
+          itemHiddenStyle: {
+             color: '#606063'
+          }
      },
 
      tooltip: {
-         shared: true,
-         crosshairs: true
+   	      backgroundColor: 'rgba(0, 0, 0, 0.85)',
+   	      style: {
+   	         color: '#F0F0F0'
+   	      }
      },
+     plotOptions: {
+         series: {
+            dataLabels: {
+               color: '#B0B0B3'
+            },
+            marker: {
+               lineColor: '#333'
+            }
+         },
+         boxplot: {
+            fillColor: '#505053'
+         },
+         candlestick: {
+            lineColor: 'white'
+         },
+         errorbar: {
+            color: 'white'
+         }
+      },
+      drilldown: {
+          activeAxisLabelStyle: {
+             color: '#F0F0F3'
+          },
+          activeDataLabelStyle: {
+             color: '#F0F0F3'
+          }
+       },
 
+       navigation: {
+          buttonOptions: {
+             symbolStroke: '#DDDDDD',
+             theme: {
+                fill: '#505053'
+             }
+          }
+       },
+      credits: {
+          style: {
+             color: '#666'
+          }
+       },
+       labels: {
+          style: {
+             color: '#707073'
+          }
+       },
      series: [{
          name: 'Bithumb',
          lineWidth: 4,
@@ -122,4 +241,5 @@
          name: 'Poloneix'
      }]
  });
+});
 </script>
