--- a/WebContent/test/coin.html
+++ b/WebContent/test/coin.html
@@ -1,4 +1,4 @@
-<script src="https://code.highcharts.com/highcharts.js"></script>
+<!-- <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <meta charset="utf-8">
 <div id="container" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto">
@@ -71,4 +71,4 @@ Highcharts.chart('container', {
     }]
 });
 </script>
-</div>
+</div> -->
