--- a/WebContent/test/ltc_volume.html
+++ b/WebContent/test/ltc_volume.html
@@ -97,7 +97,7 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
      },
 
      title: {
-         text: '시세 정보',
+         text: '거래량-Volum',
          style: {
              color: '#E0E0E3',
              textTransform: 'uppercase',
@@ -106,7 +106,7 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
      },
 
      subtitle: {
-         text: '일주일간 시세',
+         text: '일주일 거래량',
          style: {
              color: '#E0E0E3',
              textTransform: 'uppercase'
