--- a/WebContent/test/btc_volume.html
+++ b/WebContent/test/btc_volume.html
@@ -216,6 +216,17 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
              color: '#707073'
           }
        },
+       legend: {
+    	      itemStyle: {
+    	         color: '#FFFFFF'
+    	      },
+    	      itemHoverStyle: {
+    	         color: '#FFFFFF'
+    	      },
+    	      itemHiddenStyle: {
+    	         color: '#FFFFFF'
+    	      }
+    	   },
      series: [{
          name: 'Bithumb',
          lineWidth: 4,
