--- a/WebContent/test/ltc_volume.html
+++ b/WebContent/test/ltc_volume.html
@@ -114,7 +114,7 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
      },
 
      xAxis: {
-         tickInterval: 4 * 3600 * 1000, // 4시간 단위
+         tickInterval: 2 * 4 * 3600 * 1000, // 4시간 단위
          tickWidth: 0,
          gridLineColor: '#707073',
          labels: {
@@ -134,11 +134,6 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
 
      yAxis: [{ // left y axis
     	 gridLineColor: '#707073',
-         labels: {
-            style: {
-               color: '#E0E0E3'
-            }
-         },
          lineColor: '#707073',
          minorGridLineColor: '#505053',
          tickColor: '#707073',
@@ -148,7 +143,10 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
          },
          gridLineWidth: 3,
          labels: {
-             format: '{value:.,0f}'
+             format: '{value:.,0f}',
+             style: {
+                 color: '#FFFFFF'
+              }
          },
          showFirstLabel: false
      }, { // right y axis
@@ -159,7 +157,10 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
              text: null
          },
          labels: {
-             format: '{value:.,0f}'
+             format: '{value:.,0f}',
+             style: {
+                 color: '#FFFFFF'
+              }
          },
          showFirstLabel: false
      }],
@@ -216,6 +217,17 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
              color: '#707073'
           }
        },
+       legend: {
+ 	      itemStyle: {
+ 	         color: '#FFFFFF'
+ 	      },
+ 	      itemHoverStyle: {
+ 	         color: '#FFFFFF'
+ 	      },
+ 	      itemHiddenStyle: {
+ 	         color: '#FFFFFF'
+ 	      }
+ 	   },
      series: [{
          name: 'Bithumb',
          lineWidth: 4,
