--- a/WebContent/test/xrp_price.html
+++ b/WebContent/test/xrp_price.html
@@ -112,7 +112,7 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
      },
 
      xAxis: {
-         tickInterval: 4 * 3600 * 1000, // 4시간 단위
+         tickInterval: 2 * 4 * 3600 * 1000, // 4시간 단위
          tickWidth: 0,
          gridLineColor: '#707073',
          labels: {
@@ -132,11 +132,6 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
 
      yAxis: [{ // left y axis
     	 gridLineColor: '#707073',
-         labels: {
-            style: {
-               color: '#E0E0E3'
-            }
-         },
          lineColor: '#707073',
          minorGridLineColor: '#505053',
          tickColor: '#707073',
@@ -146,7 +141,10 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
          },
          gridLineWidth: 3,
          labels: {
-             format: '{value:.,0f}'
+             format: '{value:.,0f}',
+             style: {
+                 color: '#FFFFFF'
+              }
          },
          showFirstLabel: false
      }, { // right y axis
@@ -157,7 +155,10 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
              text: null
          },
          labels: {
-             format: '{value:.,0f}'
+             format: '{value:.,0f}',
+             style: {
+                 color: '#FFFFFF'
+              }
          },
          showFirstLabel: false
      }],
