--- a/WebContent/test/eth_volume.html
+++ b/WebContent/test/eth_volume.html
@@ -74,6 +74,12 @@ function handleFiles() {
 }
 -->
 
+Highcharts.setOptions({
+    lang: {
+        thousandsSep: ','
+    }
+});
+
 $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.csv&callback=?', function (csv) {
  Highcharts.chart('container', {
 	 colors: ['#2b908f', '#90ee7e', '#f45b5b', '#7798BF', '#aaeeee', '#ff0066', '#eeaaee',
