--- a/WebContent/test/ltc_volume.html
+++ b/WebContent/test/ltc_volume.html
@@ -97,7 +97,7 @@ $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=analytics.
      },
 
      title: {
-         text: '거래량-Volum',
+         text: '거래량-Volume',
          style: {
              color: '#E0E0E3',
              textTransform: 'uppercase',
